namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-court-data-ui-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-court-data-ui-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "legal-aid-agency"
    cloud-platform.justice.gov.uk/application: "View court data"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crimeapps-core"
    cloud-platform.justice.gov.uk/owner: "LAA get paid team: laa-get-paid@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-court-data-ui"
